WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270212
DigitalCredentialRequestOptions doesn't need a abort signal
https://bugs.webkit.org/show_bug.cgi?id=270212
Summary
DigitalCredentialRequestOptions doesn't need a abort signal
Marcos Caceres
Reported
2024-02-27 19:12:46 PST
The abort signal is taken from CredentialRequestOptions.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-27 19:33:17 PST
<
rdar://problem/123735008
>
Marcos Caceres
Comment 2
2024-02-27 19:36:05 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25211
EWS
Comment 3
2024-02-28 01:45:00 PST
Committed
275437@main
(71de231b1df2): <
https://commits.webkit.org/275437@main
> Reviewed commits have been landed. Closing PR #25211 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug