DigitalCredentialRequestOptions doesn't need an abort signal https://bugs.webkit.org/show_bug.cgi?id=270212 rdar://123735008

Reviewed by Anne van Kesteren.

Removed signal member as per latest Digital Credentials spec.

* Source/WebCore/Modules/credentialmanagement/DigitalCredentialRequestOptions.h:
* Source/WebCore/Modules/credentialmanagement/DigitalCredentialRequestOptions.idl:

Canonical link: https://commits.webkit.org/275437@main